Update 'ms6zca8nw-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:221cbdce4c71056c689cf72be8349303a8ea854e@sha256:7f6471e703a07a380241de13b137ccee80c927aff7da55769cecc3198cbfd435

--- a/components/ms6zca8nw-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/ms6zca8nw-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ms6zca8nw-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:221cbdce4c71056c689cf72be8349303a8ea854e@sha256:7f6471e703a07a380241de13b137ccee80c927aff7da55769cecc3198cbfd435
+          name: container-image
